# toy-banking

./: .gitignore  README.md  app.py  fake.py  genkeys.py  models.py  pyproject.toml
bank_service/: app.py  config.py  fake.py  genkeys.py  models.py  pyproject.toml
bank_service/keys/: private_key.pem  public_key.pem
bank_service/migrations/: env.py
bank_service/migrations/versions/: 7af14a82fdd3_adding_balance.py  aa21f05dcac1_adding_state_and_annotations_to_.py  e02b25a1f7f3_initial.py
registry/: alembic.ini  app.py  config.py  models.py  pyproject.toml
registry/migrations/: env.py
registry/migrations/versions/: 4b79f1f6a758_initial.py
