[tool.poetry]
name = "toy-banking"
version = "0.1.0"
description = "Minimal registry service for bank service instance discovery"
authors = ["Jean-Pierre Chauvel <jean.p.chauvel@gmail.com>, Antonio Ognio <aognio@gmail.com>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlmodel = "^0.0.18"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
